--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@madnesslabs/fireenjin-components",
-  "namespace": "fireenjin",
-  "version": "1.0.4",
+  "name": "@madnesslabs/enjin-editor",
+  "namespace": "enjin",
+  "version": "1.0.0",
   "distDirs": {
-    "stencil": "dist-stencil",
+    "stencil": "dist",
     "storybook": "dist-storybook"
   },
-  "main": "dist-stencil/index.cjs.js",
-  "module": "dist-stencil/index.js",
-  "es2015": "dist-stencil/esm/index.js",
-  "es2017": "dist-stencil/esm/index.js",
-  "jsnext:main": "dist-stencil/esm/index.mjs",
-  "types": "dist-stencil/index.d.ts",
-  "collection": "dist-stencil/collection/collection-manifest.json",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
+  "es2015": "dist/esm/index.js",
+  "es2017": "dist/esm/index.js",
+  "jsnext:main": "dist/esm/index.mjs",
+  "types": "dist/index.d.ts",
+  "collection": "dist/collection/collection-manifest.json",
   "scripts": {
     "npm:install": "npm install",
     "start": "concurrently -n storybook,stencil,proxy -c \"bgMagenta.bold,bgBlue.bold,bgCyan.bold\" \"npm:watch:storybook\" \"npm:watch:stencil\" \"npm:watch:proxy\"",
@@ -22,7 +22,7 @@
     "new:component": "stencil generate",
     "build": "run-s build:stencil build:storybook",
     "build:stencil": "stencil build --docs",
-    "build:storybook": "build-storybook --output-dir ./dist-storybook --static-dir ./dist-stencil/stencil-storybook",
+    "build:storybook": "build-storybook --output-dir ./dist-storybook --static-dir ./dist/enjin",
     "test": "stencil test --spec --e2e --coverage",
     "lint": "run-p lint:js",
     "lint:js": "eslint src/**/*{.ts,.tsx}",
@@ -35,10 +35,28 @@
     }
   },
   "dependencies": {
-    "@ionic/core": "^5.4.1",
+    "@ionic/core": "^5.5.2",
     "@stencil/core": "^2.0.3",
+    "@editorjs/editorjs": "^2.19.1",
+    "@editorjs/embed": "^2.4.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/list": "^1.6.1",
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/table": "^1.3.0",
+    "@ionic-native/core": "^5.30.0",
+    "@ionic-native/facebook": "^5.30.0",
+    "@ionic-native/geolocation": "^5.30.0",
+    "@ionic-native/google-plus": "^5.30.0",
+    "@ionic-native/social-sharing": "^5.30.0",
+    "@ionic-native/twitter-connect": "^5.30.0",
     "@storybook/web-components": "^6.0.26",
-    "lit-html": "^1.3.0"
+    "editorjs-paragraph-with-alignment": "^1.1.0",
+    "editorjs-parser": "^1.4.3",
+    "editorjs-style": "^2.2.0",
+    "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
+    "lit-html": "^1.3.0",
+    "firebase": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
