--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     }
   },
   "dependencies": {
-    "@ionic/core": "^5.5.2",
-    "@stencil/core": "^2.0.3",
     "@editorjs/editorjs": "^2.19.1",
     "@editorjs/embed": "^2.4.0",
     "@editorjs/header": "^2.6.1",
@@ -50,50 +48,53 @@
     "@ionic-native/google-plus": "^5.30.0",
     "@ionic-native/social-sharing": "^5.30.0",
     "@ionic-native/twitter-connect": "^5.30.0",
+    "@ionic/core": "^5.5.2",
+    "@stencil/core": "^2.3.0",
     "@storybook/web-components": "^6.1.10",
     "editorjs-paragraph-with-alignment": "^1.1.0",
     "editorjs-parser": "^1.4.3",
     "editorjs-style": "^2.2.0",
     "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
+    "firebase": "^8.1.2",
     "lit-html": "^1.3.0",
-    "firebase": "^8.1.2"
+    "split-me": "^1.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.10",
     "@stencil/eslint-plugin": "^0.3.1",
     "@storybook/addon-actions": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-notes": "^5.3.21",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.12",
     "@types/puppeteer": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.1.1",
-    "eslint": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "babel-loader": "^8.2.2",
+    "chalk": "^4.1.0",
+    "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^6.4.0",
+    "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript": "^10.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.2",
     "gh-pages": "^3.1.0",
-    "husky": "^4.3.0",
+    "http-proxy-middleware": "^1.0.5",
+    "husky": "^4.3.5",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
-    "npm-run-all": "^4.1.5",
-    "puppeteer": "^5.3.1",
-    "react-is": "^16.13.1",
-    "stylelint": "^13.7.2",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "typescript": "^4.0.3",
-    "write-file-webpack-plugin": "^4.5.1",
-    "http-proxy-middleware": "^1.0.5",
     "node-fetch": "^2.6.1",
-    "chalk": "^4.1.0",
-    "concurrently": "^5.3.0",
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^5.5.0",
+    "react-is": "^16.13.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "ts-dedent": "^2.0.0",
+    "typescript": "^4.1.3",
     "wait-on": "^5.2.0",
-    "ts-dedent": "^2.0.0"
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "jest": {
     "preset": "@stencil/core/testing"
