--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "run-p lint:js",
     "lint:js": "eslint src/**/*{.ts,.tsx}",
     "chromatic": "run-s build:stencil chromatic:publish",
-    "chromatic:publish": "npx chromatic --project-token r7m9tomdlfj --build-script-name build:storybook"
+    "chromatic:publish": "npx chromatic --project-token KEY_HERE --build-script-name build:storybook"
   },
   "husky": {
     "hooks": {
@@ -50,7 +50,8 @@
     "@ionic-native/twitter-connect": "^5.30.0",
     "@ionic/core": "^5.5.2",
     "@stencil/core": "^2.3.0",
-    "@storybook/web-components": "^6.1.10",
+    "@storybook/web-components": "^6.1.11",
+    "editorjs-inline-font-size-tool": "^1.0.1",
     "editorjs-paragraph-with-alignment": "^1.1.0",
     "editorjs-parser": "^1.4.3",
     "editorjs-style": "^2.2.0",
@@ -62,12 +63,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@stencil/eslint-plugin": "^0.3.1",
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/addon-links": "^6.1.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
     "@storybook/addon-notes": "^5.3.21",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.12",
+    "@types/node": "^14.14.13",
     "@types/puppeteer": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
