--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "editorjs-style": "^2.2.0",
     "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
     "firebase": "^8.2.10",
-    "lit-html": "^1.3.0",
-    "split-me": "^1.3.0"
+    "lit-html": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
