--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "editorjs-parser": "^1.5.3",
     "editorjs-style": "^2.2.0",
     "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
-    "firebase": "^8.3.1",
+    "firebase": "8.2.10",
     "lit-html": "^1.3.0"
   },
   "devDependencies": {
