--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@editorjs/header": "^2.6.1",
     "@editorjs/image": "^2.6.0",
     "@editorjs/list": "^1.6.2",
-    "@editorjs/raw": "^2.3.0",
     "@editorjs/table": "^1.3.0",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/facebook": "^5.31.1",
@@ -60,7 +59,8 @@
     "editorjs-style": "^2.2.0",
     "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
     "firebase": "8.2.10",
-    "lit-html": "^1.3.0"
+    "lit-html": "^1.3.0",
+    "prismjs": "^1.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
