--- a/package.json
+++ b/package.json
@@ -2,36 +2,23 @@
   "name": "@madnesslabs/enjin-editor",
   "namespace": "enjin",
   "version": "1.0.0",
-  "distDirs": {
-    "stencil": "dist",
-    "storybook": "dist-storybook"
-  },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.js",
-  "es2015": "dist/esm/index.js",
-  "es2017": "dist/esm/index.js",
-  "jsnext:main": "dist/esm/index.mjs",
-  "types": "dist/index.d.ts",
-  "collection": "dist/collection/collection-manifest.json",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
+  "es2015": "./dist/esm/index.js",
+  "es2017": "./dist/esm/index.js",
+  "jsnext:main": "./dist/esm/index.mjs",
+  "types": "./dist/types/components.d.ts",
+  "collection": "./dist/collection/collection-manifest.json",
   "scripts": {
     "dev": " stencil build --docs --dev --watch --serve",
     "npm:install": "npm install",
     "serve": "npm-run-all --parallel dev presets:watch",
-    "start": "concurrently -n storybook,stencil,proxy -c \"bgMagenta.bold,bgBlue.bold,bgCyan.bold\" \"npm:watch:storybook\" \"npm:watch:stencil\" \"npm:watch:proxy\"",
-    "watch:storybook": "start-storybook -p 3001 --ci --quiet",
-    "watch:stencil": "stencil build --docs --dev --watch --serve --port 3002",
-    "watch:proxy": "wait-on http://localhost:3001/ && wait-on http://localhost:3002/ && node ./scripts/proxy.js",
+    "start": "npm-run-all --parallel dev presets:watch",
     "new:component": "stencil generate",
-    "build": "run-s build:stencil build:storybook",
-    "build:stencil": "stencil build --docs",
-    "build:storybook": "build-storybook --output-dir ./dist-storybook --static-dir ./dist/enjin",
+    "build": "stencil build --docs --prod",
     "test": "stencil test --spec --e2e --coverage",
-    "lint": "run-p lint:js",
-    "lint:js": "eslint src/**/*{.ts,.tsx}",
     "presets:build": "fireenjin presets",
-    "presets:watch": "fireenjin presets watch",
-    "chromatic": "run-s build:stencil chromatic:publish",
-    "chromatic:publish": "npx chromatic --project-token KEY_HERE --build-script-name build:storybook"
+    "presets:watch": "fireenjin presets watch"
   },
   "husky": {
     "hooks": {
@@ -39,74 +26,32 @@
     }
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.19.3",
-    "@editorjs/embed": "^2.4.0",
+    "@editorjs/editorjs": "^2.21.0",
+    "@editorjs/embed": "^2.4.6",
     "@editorjs/header": "^2.6.1",
     "@editorjs/image": "^2.6.0",
     "@editorjs/list": "^1.6.2",
     "@editorjs/table": "^1.3.0",
-    "@ionic-native/core": "^5.31.1",
-    "@ionic-native/facebook": "^5.31.1",
-    "@ionic-native/geolocation": "^5.31.1",
-    "@ionic-native/google-plus": "^5.31.1",
-    "@ionic-native/social-sharing": "^5.31.1",
-    "@ionic-native/twitter-connect": "^5.31.1",
-    "@ionic/core": "^5.6.1",
-    "@stencil/core": "^2.4.0",
-    "@storybook/web-components": "^6.1.21",
-    "editorjs-paragraph-with-alignment": "^1.1.0",
+    "@ionic-native/core": "^5.32.0",
+    "@ionic-native/facebook": "^5.32.0",
+    "@ionic-native/geolocation": "^5.32.0",
+    "@ionic-native/google-plus": "^5.32.0",
+    "@ionic-native/social-sharing": "^5.32.0",
+    "@ionic-native/twitter-connect": "^5.32.0",
+    "@ionic/core": "^5.6.6",
+    "@stencil/core": "^2.5.2",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-parser": "^1.5.3",
-    "editorjs-style": "^2.2.0",
+    "editorjs-style": "^3.0.2",
     "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
-    "firebase": "8.2.10",
-    "lit-html": "^1.3.0",
+    "firebase": "^8.4.3",
     "prismjs": "^1.23.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
     "@madnesslabs/fireenjin-designer": "^1.1.31",
-    "@stencil/eslint-plugin": "^0.3.1",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/addon-notes": "^5.3.21",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "@types/puppeteer": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-loader": "^8.2.2",
-    "chalk": "^4.1.0",
-    "concurrently": "^5.3.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb-typescript": "^10.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "gh-pages": "^3.1.0",
-    "http-proxy-middleware": "^1.0.5",
-    "husky": "^4.3.8",
-    "jest": "^26.4.2",
-    "jest-cli": "^26.4.2",
-    "node-fetch": "^2.6.1",
-    "npm-run-all": "^4.1.5",
-    "puppeteer": "^5.5.0",
-    "react-is": "^16.13.1",
-    "stylelint": "^13.12.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "ts-dedent": "^2.0.0",
-    "typescript": "^4.2.3",
-    "wait-on": "^5.3.0",
-    "write-file-webpack-plugin": "^4.5.1"
+    "npm-run-all": "^4.1.5"
   },
   "jest": {
     "preset": "@stencil/core/testing"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
