--- a/package.json
+++ b/package.json
@@ -49,7 +49,14 @@
   },
   "devDependencies": {
     "@madnesslabs/fireenjin-designer": "^1.1.31",
-    "npm-run-all": "^4.1.5"
+    "@types/jest": "^26.0.20",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "npm-run-all": "^4.1.5",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-typescript": "^1.0.1",
+    "typescript": "^4.2.0"
   },
   "jest": {
     "preset": "@stencil/core/testing"
