--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-parser": "^1.5.3",
     "editorjs-style": "^3.0.2",
-    "editorjsMdParser": "git+https://github.com/stejul/editorjs-markdown-parser.git",
     "firebase": "^8.4.3",
-    "prismjs": "^1.23.0"
+    "prismjs": "^1.23.0",
+    "remark": "^13.0.0"
   },
   "devDependencies": {
     "@madnesslabs/fireenjin-designer": "^1.1.31",
