--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@madnesslabs/fireenjin-designer": "^1.1.31",
     "@types/jest": "^26.0.20",
+    "emitter": "^0.0.7",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
