--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "14"
       - name: Install
-        run: npm ci
+        run: npm install --verbose
       - name: Build
         run: npm run build --if-present
       - name: Deploy to gh-pages
